--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   cicdpractice:
-    image: cicdpractice:latest
+    image: leu3ery/cicdpractice:latest
     # restart: always
     ports: 
       - "3000:3000"
