--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -64,6 +64,6 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           script: |
             cd /root/ci-cd_practice
-            docker-compose pull
-            docker-compose up -d
+            docker compose pull
+            docker compose up -d
             docker image prune -f
